--- a/install
+++ b/install
@@ -1,6 +1,12 @@
 #!/bin/bash
 
+export I3_HOME=$(pwd)
+
+source ./configs/colors
+
 $I3_HOME/install-configs
 $I3_HOME/programs/install-programs
 
-notify-send "User Config" "User environment updated"
+# if command -v notify-send; then
+# notify-send "User Config" "User environment updated"
+# fi
