--- a/install
+++ b/install
@@ -1,8 +1,9 @@
 #!/bin/bash
 
-export I3_HOME=$(pwd)
 
-source ./configs/colors
+export I3_HOME=$(dirname "$(realpath "$0")")
+
+source $I3_HOME/configs/colors
 
 $I3_HOME/install-configs
 $I3_HOME/programs/install-programs
